# gamemode-explorer

./: com-feralinteractive.vala  main.vala  meson.build
data/: com.feralinteractive.GameMode.xml
